[metadata]
name = horizons-client-pkg-alevan10
version = 0.1.0
author = Andrew LeVan
author_email = levan.andrew.w@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aiohttp==3.7.4
    pandas==1.3.5
    python-dateutil==2.8.2

[options.packages.find]
where = src